fix z-index

--- a/src/views/Delegates/components/AddDelegates/index.scss
+++ b/src/views/Delegates/components/AddDelegates/index.scss
@@ -3,7 +3,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 10;
+  z-index: 200;
   background-color: white;
   border-radius: 20px;
   -webkit-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.15);
